# E621ner

./: .gitignore  .gitmodules  .project  CMakeLists.txt  ChatBox.gd  E621.gdnlib  Main.gd  Main.gdns  Main.tscn  PicBox.gd  TagBox.gd  api.json  placeholder.jpg.import  project.godot
cmake/: Conan.cmake  StandardProjectSettings.cmake
native/: CMakeLists.txt  E621.cpp  E621.hpp  E621_API_Key.txt
scene/: Main.tscn
script/: ChatBox.gd  PicBox.gd  TagsFoundLabel.gd
